@@ -46,7 +46,10 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
     static final String SECURITY_MANAGER_PROP = "java.security.manager";
     static final String SECURITY_MANAGER_PROP_WITH_ALLOW_VALUE = "-D" + SECURITY_MANAGER_PROP + "=" + ALLOW_VALUE;
     static final String[] DEFAULT_VM_ARGUMENTS;
+    /** Packages being exported or opened are available on all JVMs */
     static final Collection<String> DEFAULT_MODULAR_VM_ARGUMENTS;
+    /** Packages being exported or opened may not be available on all JVMs */
+    static final Collection<String> OPTIONAL_DEFAULT_MODULAR_VM_ARGUMENTS;
 
     static {
         // Default JVM parameters for all versions
@@ -62,7 +65,8 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
         // Additions to these should include good explanations why in the relevant JIRA
         // Keep them alphabetical to avoid the code history getting confused by reordering commits
         final ArrayList<String> modularJavaOpts = new ArrayList<>();
-        if (!Boolean.parseBoolean(System.getProperty("launcher.skip.jpms.properties", "false"))) {
+        final boolean skipJPMSOptions = Boolean.getBoolean("launcher.skip.jpms.properties");
+        if (!skipJPMSOptions) {
             modularJavaOpts.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
             modularJavaOpts.add("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED");
             modularJavaOpts.add("--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED");
@@ -83,6 +87,12 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
             modularJavaOpts.add("--add-modules=java.se");
         }
         DEFAULT_MODULAR_VM_ARGUMENTS = Collections.unmodifiableList(modularJavaOpts);
+
+        final ArrayList<String> optionalModularJavaOpts = new ArrayList<>();
+        if (!skipJPMSOptions) {
+            optionalModularJavaOpts.add("--add-opens=java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED");
+        }
+        OPTIONAL_DEFAULT_MODULAR_VM_ARGUMENTS = Collections.unmodifiableList(optionalModularJavaOpts);
     }
 
     protected final Environment environment;
